# epiphan-sales-agent

./: .dockerignore  .env.example  .gitignore  Backlog.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LANGGRAPH_TIME_TRAVEL.md  PLANNING.md  README.md  TASK.md  WORKTREE_TASK.md  docker-compose.yml  init.sh  railway.toml
.claude/: Backlog.md  PROJECT_CONTEXT.md
.claude/agents/: devils-advocate.md  observer-full.md  observer-lite.md
.claude/observers/: ARCH.md  QUALITY.md
.claude/rules/: coding.md
.serena/: project.yml
backend/: .dockerignore  .env.example  .env.production.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/routes/: __init__.py  agents.py  auth.py  autonomous.py  batch.py  call_brief.py  call_outcomes.py  call_session.py  competitors.py  leads.py  monitoring.py  personas.py  scripts.py  university_accounts.py  webhooks.py
backend/app/core/: cache.py  config.py  rate_limit.py
backend/app/data/: __init__.py  call_outcome_schemas.py  call_session_schemas.py  coaching_schemas.py  competitors.py  discovery.py  lead_schemas.py  market_intel.py  persona_warm_scripts.py  personas.py  product-catalog.json  product_catalog.py  schemas.py  scripts.py  stories.py  templates.py  university_schemas.py
backend/app/middleware/: auth.py
backend/app/models/: __init__.py  base.py  conversation.py  icp.py  lead.py  linkedin.py  pattern.py
backend/app/services/autonomous/: __init__.py  dedup.py  drafter.py  learner.py  runner.py  schemas.py  sourcer.py
backend/app/services/call_outcomes/: service.py
backend/app/services/call_session/: __init__.py  manager.py
backend/app/services/coaching/: __init__.py  context_builder.py  invariants.py  state_machine.py  tactics.py
backend/app/services/database/: __init__.py  supabase_client.py
backend/app/services/enrichment/: __init__.py  apollo.py  audit.py  clay.py  clearbit.py  pipeline.py  scraper.py
backend/app/services/hubspot/: sync.py
backend/app/services/integrations/clari/: __init__.py  client.py
backend/app/services/integrations/hubspot/: __init__.py  client.py  phone_sync.py
backend/app/services/langgraph/: __init__.py  checkpointing.py  gates.py  memory.py  middleware.py  states.py  telemetry.py  tracing.py
backend/app/services/langgraph/agents/: __init__.py  call_brief.py  coaching.py  competitor_intel.py  email_personalization.py  lead_research.py  orchestrator.py  qualification.py  script_selection.py
backend/app/services/langgraph/memory/: __init__.py  semantic_store.py  summarizer.py  trimmer.py  user_store.py
backend/app/services/langgraph/tools/: __init__.py  competitor_tools.py  email_tools.py  harvester_mapper.py  qualification_tools.py  research_tools.py  script_tools.py  toolkit.py
backend/app/services/llm/: __init__.py  clients.py
backend/app/services/scoring/: __init__.py  atl_detector.py  lead_scorer.py  persona_matcher.py  university_scorer.py
backend/docs/plans/: 2025-01-27-langgraph-agents-design.md  2025-01-27-langgraph-agents-implementation.md
backend/migrations/: 001_add_checkpoints.sql  002_add_semantic_store.sql  003_add_webhook_phone_data.sql  003_autonomous_pipeline.sql  004_add_call_outcomes.sql  005_add_call_briefs.sql  006_add_clay_enrichment.sql  007_add_university_accounts.sql
backend/supabase/migrations/: 20240127000001_leads.sql  20240127000002_outreach.sql
backend/tests/: conftest.py
backend/tests/integration/: test_middleware_pipeline.py  test_qualification_edge_cases.py  test_supabase.py
backend/tests/unit/: test_api_agents.py  test_api_batch.py  test_api_call_brief.py  test_api_cold_scripts.py  test_api_competitors.py  test_api_leads.py  test_api_personas.py  test_api_warm_scripts.py  test_apollo_client.py  test_apollo_tiered.py  test_atl_detector.py  test_auth_middleware.py  test_brief_effectiveness_scoring.py  test_call_brief_assembler.py  test_call_brief_linkage.py  test_call_outcome_service.py  test_call_outcomes.py  test_call_session_manager.py  test_call_session_memory.py  test_call_session_ownership.py  test_call_session_rest.py  test_call_session_websocket.py  test_checkpointing_encryption.py  test_clay_audit.py  test_clay_client.py  test_clay_phone_merging.py  test_clay_pipeline.py  test_clay_supabase.py  test_clay_webhook.py  test_clearbit_client.py  test_coaching_context_builder.py  test_coaching_schemas.py  test_coaching_state_machine.py  test_competitor_intel_agent.py  test_competitor_tools.py  test_conversation_summarizer.py  test_email_personalization_agent.py  test_email_tools.py  test_harvester_webhook.py  test_hubspot_sync.py  (+25 more)
backend/tests/unit/langgraph/: __init__.py  test_coaching_agent.py  test_gates.py  test_middleware.py  test_orchestrator.py  test_semantic_memory.py  test_streaming.py  test_telemetry.py  test_toolkit.py  test_tracing.py  test_trimmer.py
backend/tests/unit/services/autonomous/: test_dedup.py  test_drafter.py  test_learner.py  test_runner.py  test_schemas.py  test_sourcer.py
docs/: DEEPAGENTS_REFERENCE.md  README.md
docs/agents/: overview.md  qualification-agent.md
supabase/: config.toml  seed.sql
(+15 files in other folders)
