[project]
name = "your-project"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.10"

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",      # Parallel test execution
    "pytest-timeout>=2.2.0",    # Prevent hanging tests
    
    # Mocking
    "respx>=0.20.0",            # Mock httpx requests
    "pytest-mock>=3.12.0",      # Enhanced mocking utilities
    
    # Code Quality
    "ruff>=0.3.0",              # Linting + formatting
    "mypy>=1.8.0",              # Type checking
    
    # Test Data
    "faker>=22.0.0",            # Generate realistic test data
    "factory-boy>=3.3.0",       # Test fixtures factory pattern
]

[tool.pytest.ini_options]
# Can also configure pytest here instead of pytest.ini
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short -ra"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
