[project]
name = "your-project"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.10"

dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.27.0",
    "langchain-anthropic>=1.3.1",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "langgraph-checkpoint-postgres>=3.0.3",
    "lxml>=6.0.2",
    "pydantic>=2.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.5.0",      # Parallel test execution
    "pytest-timeout>=2.2.0",    # Prevent hanging tests
    
    # Mocking
    "respx>=0.20.0",            # Mock httpx requests
    "pytest-mock>=3.12.0",      # Enhanced mocking utilities
    
    # Code Quality
    "ruff>=0.3.0",              # Linting + formatting
    "mypy>=1.8.0",              # Type checking
    
    # Test Data
    "faker>=22.0.0",            # Generate realistic test data
    "factory-boy>=3.3.0",       # Test fixtures factory pattern
]

[tool.pytest.ini_options]
# Can also configure pytest here instead of pytest.ini
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short -ra"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

# Ignore missing stubs for external libraries without type support
[[tool.mypy.overrides]]
module = "hubspot.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langgraph.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "langchain.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_anthropic.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "langchain_openai.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "langchain_core.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langgraph_checkpoint_postgres.*"
ignore_missing_imports = true

# LangChain library types don't match runtime API for ChatAnthropic/ChatOpenAI kwargs
[[tool.mypy.overrides]]
module = "app.services.llm.clients"
ignore_errors = true
